<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="Edit"
        app:showAsAction="ifRoom" />

</menu>