...
        android:text="Alarm"
        android:textSize="20sp"></CheckBox>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/description"
        android:hint="(Optional)Description"
        android:inputType="textShortMessage"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"></EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addevent"
        android:text="Add Event"
        android:textSize="30sp"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:layout_gravity="center"></Button>

...
