<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/activity_custom_view">
        <com.example.calendar.CustomCalendarView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/returntomain"></com.example.calendar.CustomCalendarView>

    </LinearLayout>
