<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <Button
        android:id="@+id/deleteevent"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_gravity="end"
        android:text="del"
        android:textSize="10dp"></Button>
    <TextView
        android:id="@+id/timeOfEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date And Time"
        android:textColor="#000000" />
    <TextView
        android:id="@+id/dateOfEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date And Time"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/nameOfEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Name"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textColor="#000000"
        tools:ignore="SpeakableTextPresentCheck" />




</LinearLayout>