<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/newTaskText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="New Task" />

    <Button
        android:id="@+id/newTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newTaskText"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:text="Save"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@android:color/darker_gray"/>


</RelativeLayout>
